# zeno-evals

./: .gitignore  README.md  pyproject.toml
example/: example.jsonl
example_medicine/: distill.py  example.jsonl
examples/: crossword-turbo-0301.jsonl  crossword-turbo.jsonl  crossword_fns.py
zeno_evals/: __init__.py  main.py
